--- a/sass/_newsspan.scss
+++ b/sass/_newsspan.scss
@@ -4,8 +4,7 @@
   width: 100%;
   .bg-img {
     height: 420px;
-    align-content: flex-end;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     flex-basis: 100%;
     text-decoration: none;
@@ -16,6 +15,7 @@
     align-content: flex-end;
     @include tablet {
       flex-basis: 50%;
+      background-size: cover;
     }
     @include desktop {
       flex-basis: 25%;
@@ -28,6 +28,11 @@
       background-color: rgba(0, 0, 0, 0.5);
       background-size: cover;
       width: 100%;
+      &.hover {
+        .article-text {
+          transform: translateY(0);
+        }
+      }
 
       .article-title {
         padding: 10px;
@@ -50,9 +55,11 @@
         align-items: flex-start;
       }
     }
+    &:focus,
     &:hover {
       .article-text {
         transform: translateY(0);
+        border: 2px solid white;
       }
     }
   }
